fix dynamic action select on small screens

--- a/common/directives/actionSelect/style.scss
+++ b/common/directives/actionSelect/style.scss
@@ -72,6 +72,10 @@ rf-action-select {
 
       .lower-select-container {
          width: max-content;
+         min-width: min-content;
+         @media (max-width: 768px) {
+            top: 0;
+         }
       }
    }
 
